# cuda-opt

./: .env  .gitignore  README.md  driver.py  kernel.cu  requirements.txt
harness/: CMakeLists.txt  harness.cu  profile.ncu-rep  rebuild.sh  test.csv
harness/kernels/: simple_kernel.cu  simple_kernel.cuh
src/: arxiv.py  ast.py  loader.py  opt.py  verifier.py
tests/: matmul.cu  matmul_opt.cu  matmul_opt_2.cu
